--- a/.github/workflows/dynamic-repo-name.yml
+++ b/.github/workflows/dynamic-repo-name.yml
@@ -1,9 +1,8 @@
 name: Dynamic Repo Name
 
-
 on:
   workflow_dispatch:
-  push:
+  # push: # disabled for now
 
 jobs:
   package-infos:
@@ -25,12 +24,6 @@ jobs:
           echo "owner=${NAME%%/*}" >> $GITHUB_OUTPUT
           echo "name=${NAME#*/}" >> $GITHUB_OUTPUT
           cat "$GITHUB_OUTPUT"
-
-      - name: Debug package infos
-        run: |
-          echo "🐛 fullName: ${{ steps.package-infos.outputs.fullName }}"
-          echo "🐛 owner: ${{ steps.package-infos.outputs.owner }}"
-          echo "🐛 name: ${{ steps.package-infos.outputs.name }}"
 
   release:
     name: Create Version PR or Publish
