--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -85,8 +85,10 @@ jobs:
           token: ${{ secrets.HIRASSO_ACTIONS_TOKEN }}
 
       # Run this before changesets, to make sure releases actually work
-      - name: Prepare Release
-        run: bin/js/prepareRelease.js
+      - name: Create Release Files and Prepare Dist Folder
+        run: |
+          config/cli/cli.js release:create
+          config/cli/cli.js dist:prepare
 
       # Run changesets action either if there are unreleased changesets (= a PR must be created)
       # or if the commit message matches the release PR (= new versions must be published to NPM)
@@ -120,4 +122,4 @@ jobs:
       - name: Push release to dist repo
         if: steps.cs.outputs.published == 'true'
         run: |
-          bin/js/pushReleaseToDist.js
+          config/cli/cli.js dist:push
