--- a/.github/workflows/version-or-publish.yml
+++ b/.github/workflows/version-or-publish.yml
@@ -60,6 +60,8 @@ jobs:
       # Setup PNPM before node.js, so that we use the cache in the next action
       - name: Setup PNPM
         uses: pnpm/action-setup@v4
+        with:
+          version: latest
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
