--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
   },
   "require-dev": {
     "laravel/pint": "^1.21",
+    "php-stubs/wordpress-stubs": "^6.9",
     "php-stubs/wp-cli-stubs": "^2.12"
   },
   "scripts-descriptions": {},
