Install simply-static as a dev dependency to achieve code completion

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,12 @@
   "type": "wordpress-plugin",
   "minimum-stability": "dev",
   "prefer-stable": true,
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://wpackagist.org"
+    }
+  ],
   "require": {
     "php": ">=8.2",
     "composer/installers": "^1.0 || ^2.0",
@@ -21,7 +27,13 @@
   "require-dev": {
     "laravel/pint": "^1.21",
     "php-stubs/wordpress-stubs": "^6.9",
-    "php-stubs/wp-cli-stubs": "^2.12"
+    "php-stubs/wp-cli-stubs": "^2.12",
+    "wpackagist-plugin/simply-static": "^3.5"
+  },
+  "extra": {
+    "installer-paths": {
+      "vendor/wp-plugins/{$name}/": ["type:wordpress-plugin"]
+    }
   },
   "scripts-descriptions": {},
   "config": {
